# thoth

./: .aider.chat.history.md  .aider.input.history  .gitignore  AGENTS.md  ANDROID.md  ARCHITECTURE.md  BONSAI.md  BUILD_COMPLETE.md  Cargo.toml  DONE.md  Dioxus.toml  IMPLEMENTATION_SUMMARY.md  NET_README.md  PERSISTENCE_AND_KEYS.md  README.md  TOOLS.md  WEB_INFERENCE_STATUS.md  build.rs  tailwind.css  test_persistence.sh
.cargo/: config.toml
assets/: app.css  fonts.css  plasma.js  tailwind.css
assets/tools/: calculator.rhai  current_time.rhai
doc/: AGENTS.md  Architecture.md  FINAL_STATUS.md  MLS_COMPLETE.md  MLS_STATUS.md  MercuryUI.md  PROGRESS_UPDATE.md  RUNNING.md
doc/archive/: ANDROID_BUILD_SUCCESS.md  ANDROID_FINAL_STATUS.md  ANDROID_READY.md  ANDROID_SETUP.md  INFERENCE_READY.md  WEB_INFERENCE_STATUS.md  speech.md
examples/: test_memvid.rs
font/: build.md  gen-assets.sh
public/: test-worker.js  worker.js
research/: .distillation.md.swp  agent.md  blend-modes.md  hermes.md  larql-patching.md  larql.md  memvid.md  shader-backgrounds.md  turboquant.md
src/: android_app_old.rs  app.rs  app.rs.bak  engine.rs  lib.rs  main.rs  shared.rs  web_app.rs  web_app_old.rs
src/ai/: llama.rs
src/elements/: splash.html
src/key_storage/: mod.rs
src/llama/: bindings.rs  mod.rs
src/llama_native/: bindings.rs  mod.rs
src/mem/: index.rs  mod.rs  native.rs  schema.rs  web.rs  worker.rs
src/net/: group_registry.rs  identity_pool.rs  message.rs  mls_group.rs  mod.rs  nostr_client.rs  relay_inference.rs  rhai_integration.rs  runtime.rs
src/system/: agent.rs  app_shell.rs  commands.rs  config.rs  dialog.rs  features.rs  identity.rs  mod.rs  model.rs
src/tests/: integration_test.rs
src/tools/: defs.rs  engine.rs  mod.rs  parse.rs
src/ui/: input.rs  list.rs  markdown.rs  message.rs  mod.rs
tests/: net_integration.rs
thoth/: .gitignore  ANDROID_ARCHITECTURES.md  BURN_MIGRATION.md  Cargo.toml  Dioxus.toml  STATUS.md  backends.md  build.rs  nsec.key
thoth/.cargo/: config.toml
thoth/assets/: tailwind.css
thoth/font/: build.md  private-build-plans.toml
thoth/public/: llama.js  llama.wasm
thoth/scripts/: check_android_build.sh  setup_android.sh
thoth/src/: android_app.rs  app.rs  main.rs
thoth/src/llama/: mod.rs
thoth/src/llama_android/: mod.rs
thoth/src/llama_web/: mod.rs
thoth/src/mem/: index.rs
thoth/src/system/: features.rs  key_manager.rs
thoth/src/tests/: integration_test.rs
