 [package]
 name = "thoth"
 version = "0.1.0"
 edition = "2021"

 [package.metadata.android]
 package_name = "com.thoth.app"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["sync", "macros", "time", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nostr-sdk = "0.38"
roaring = { version = "0.10", features = ["serde"] }
bincode = "1.3"
memmap2 = "0.9"
futures = "0.3"
openmls = { version = "0.8", features = ["test-utils"] }
openmls_traits = "0.3"
openmls_basic_credential = "0.5"
openmls_rust_crypto = "0.5"
rhai = { version = "1", features = ["sync"] }
tls_codec = "0.4"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
bip39 = { version = "2.0", features = ["rand"] }
hostname = "0.4"
 rand = "0.9"
comrak = "0.29"
markdown = "1.0.0"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main", features = ["desktop", "lib"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
hf-hub = "0.3"
directories = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
image = "=0.25.6"

# Android ARM64 - full inference with llama.cpp
[target.'cfg(all(target_os = "android", target_arch = "aarch64"))'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main", features = ["mobile"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
hf-hub = { version = "0.3", default-features = false, features = ["tokio"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
image = { version = "=0.25.6", default-features = false }
android-activity = { version = "0.6", features = ["native-activity"] }
openssl = { version = "0.10", features = ["vendored"] }

# Android x86_64 - full inference with llama.cpp
[target.'cfg(all(target_os = "android", target_arch = "x86_64"))'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main", features = ["mobile"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
hf-hub = { version = "0.3", default-features = false, features = ["tokio"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
image = { version = "=0.25.6", default-features = false }
android-activity = { version = "0.6", features = ["native-activity"] }
openssl = { version = "0.10", features = ["vendored"] }

# Android ARMv7 - UI only, no local inference
[target.'cfg(all(target_os = "android", target_arch = "arm"))'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main", features = ["mobile"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
image = { version = "=0.25.6", default-features = false }
android-activity = { version = "0.6", features = ["native-activity"] }
openssl = { version = "0.10", features = ["vendored"] }

 [target.'cfg(target_arch = "wasm32")'.dependencies]
 dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main", features = ["web"] }
 tokio = { version = "1", features = ["sync", "macros", "time", "rt"] }
 wasm-bindgen = "0.2"
 js-sys = "0.3"
 web-sys = { version = "0.3", features = ["Worker", "MessageEvent", "console", "FileSystemFileHandle", "FileSystemDirectoryHandle", "FileSystemGetFileOptions", "FileSystemWritableFileStream", "FileSystemCreateWritableOptions", "File"] }
 wasm-bindgen-futures = "0.4"
 getrandom = { version = "0.3", features = ["wasm_js"] }

 [target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
bindgen = "0.69"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
