[package]
name = "thoth"
version = "0.1.0"
edition = "2021"
links = "llama"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.android]
package_name = "com.thoth.app"

# Universal dependencies — compile on ALL targets (desktop, android, wasm)
[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nostr-sdk = { version = "0.38", features = ["nip59"] }
futures = "0.3"
rhai = { version = "1", features = ["sync"] }
tls_codec = "0.4"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.9"
comrak = "0.29"
openmls = "0.8"
openmls_basic_credential = "0.5"
openmls_rust_crypto = "0.5"

# Native-only dependencies (desktop + android, NOT wasm)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
roaring = { version = "0.10", features = ["serde"] }
bincode = "1.3"
memmap2 = "0.9"
bip39 = { version = "2.0", features = ["rand"] }
markdown = "1.0.0"

# Desktop (Linux/macOS/Windows)
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main", features = ["desktop", "lib"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
hf-hub = "0.3"
directories = "5"
toml = "0.8"
image = "=0.25.6"
hostname = "0.4"

# Android ARM64 - full inference with llama.cpp
[target.'cfg(all(target_os = "android", target_arch = "aarch64"))'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main", features = ["mobile"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
hf-hub = { version = "0.3", default-features = false, features = ["tokio"] }
directories = "5"
toml = "0.8"
image = { version = "=0.25.6", default-features = false }
android-activity = { version = "0.6", features = ["native-activity"] }
openssl = { version = "0.10", features = ["vendored"] }

# Android x86_64 - full inference with llama.cpp
[target.'cfg(all(target_os = "android", target_arch = "x86_64"))'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main", features = ["mobile"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
hf-hub = { version = "0.3", default-features = false, features = ["tokio"] }
directories = "5"
toml = "0.8"
image = { version = "=0.25.6", default-features = false }
android-activity = { version = "0.6", features = ["native-activity"] }
openssl = { version = "0.10", features = ["vendored"] }

# Android ARMv7 - UI only, no local inference
[target.'cfg(all(target_os = "android", target_arch = "arm"))'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main", features = ["mobile"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
directories = "5"
toml = "0.8"
image = { version = "=0.25.6", default-features = false }
android-activity = { version = "0.6", features = ["native-activity"] }
openssl = { version = "0.10", features = ["vendored"] }

# Web (wasm32)
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main", features = ["web"] }
tokio = { version = "1", features = ["sync", "macros", "rt"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Worker", "MessageEvent", "console",
    "FileSystemFileHandle", "FileSystemDirectoryHandle",
    "FileSystemGetFileOptions", "FileSystemWritableFileStream",
    "FileSystemCreateWritableOptions", "File", "Storage", "Window",
    "BinaryType", "Blob", "CloseEvent", "ErrorEvent", "DomException", "WebSocket",
] }
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
comrak = { version = "0.29", default-features = false }
openmls = { version = "0.8", features = ["js"] }

# getrandom 0.2 is pulled in by openmls/transitive deps — needs js feature on wasm
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom_02]
package = "getrandom"
version = "0.2"
features = ["js"]

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
bindgen = "0.69"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
