[package]
name = "thoth"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main", features = ["desktop"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
hf-hub = "0.3"
directories = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[build-dependencies]
bindgen = "0.69"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

# Force specific image version for native renderer
[dependencies.image]
version = "=0.25.6"
